--- a/css/style.css
+++ b/css/style.css
@@ -1,356 +1,52 @@
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-
-/* Document
-   ========================================================================== */
-
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-
-html {
-  line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-
-/**
- * Remove the margin in all browsers.
- */
-
-body {
-  margin: 0;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-
-hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-pre {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Remove the gray background on active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-
-abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-
-code,
-kbd,
-samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-
-small {
-  font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-sup {
-  top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove the border on images inside links in IE 10.
- */
-
-img {
-  border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; /* 1 */
-  font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
-  margin: 0; /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-
-button,
-input { /* 1 */
-  overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-
-button,
-select { /* 1 */
-  text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-
-legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-
-progress {
-  vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-
-textarea {
-  overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-
-[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-
-::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-
-details {
-  display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-
-summary {
-  display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-
-/**
- * Add the correct display in IE 10+.
- */
-
-template {
-  display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-
-[hidden] {
-  display: none;
-}
-
 /* 
-Myhedspace Beta - v1.0
+Myhedspace Starter - v1.0
 by Jose Erlino M. Lontok
 http://jelontok.com
 http://myhedspace.com 
 */
 
+/* Add 3rd party code  here */
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css');
+@import url('https://use.fontawesome.com/releases/v5.3.1/css/all.css');
+
 body {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+}
+
+/*  Main Elements  */
+h1,h2,h3 {
+    margin-top: 0;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+}
+table caption {
+    border-bottom: 0;
+    padding: 10px;
+    font-weight: bold;
+}
+td,th {
+    padding: 10px;    
+    text-align: left;
+}
+.table-celled caption, .table-celled td, .table-celled tr, .table-celled td, .table-celled th {
+    border: 1px solid;
+}
+.table-celled caption {
+    border-bottom: 0;
+}
+code,kbd,samp {
+    background-color: #333;
+    padding: 10px;
+    color: #ccc;
+    display: inline-block;
+    border-radius: 4px;
 }
 
 /* nav */
@@ -392,6 +88,26 @@ main {
     background-color: #2b2e3b;
     padding: 5em 0;
     text-align: center;
+    background:url(../img/web-design-2038872_1920.jpg);
+    background-size: cover;
+    position: relative;
+}
+
+.feature .container {
+    position: relative;
+    z-index: 2;
+}
+
+.feature:before {
+    content:'';
+    width: 100%;
+    height: 100%;
+    background-color: #2b2e3b;
+    opacity: 0.9;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .feature h1 {
@@ -423,10 +139,7 @@ main {
 /* layout helpers */
 .fc {
     display: flex;
-}
-
-.fc-i {
-    flex: auto;
+    flex:auto;
 }
 
 .fc-s {
@@ -437,10 +150,27 @@ main {
     justify-content: flex-end;
 }
 
-.grid {
+.fgrid {
     display: flex;
     justify-content:space-between;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;
+    justify-content:flex-start;
+}
+
+.fgrid-3 .col {
+    width: 32%;
+    margin-bottom: 15px;
+}
+
+.fgrid .col img {
+    max-width: 100%;
+    height: auto;    
+    margin: auto;
+    display: block;
+}
+
+.sidebar {
+    width: 30%;
 }
 
 .txt-l {
@@ -459,16 +189,6 @@ main {
     text-align: justify;
 }
 
-.grid-3 .column {
-    width: 32%;
-    margin-bottom: 15px;
-}
-
-.grid .column img {
-    max-width: 100%;
-    height: auto;
-}
-
 .container {
     width: 90%;
     max-width: 1400px;
@@ -484,6 +204,10 @@ main {
     text-align: center;
 }
 
+.card header h3 {
+    margin-top: 15px;
+}
+
 .card header .button {
     text-decoration: none;
     background-color: #3a585f;
@@ -491,6 +215,57 @@ main {
     padding: 5px 10px;
     border-radius: 5px;
     display: inline-block;
+}
+
+/* contact form */
+#contact-form::after {
+    content:'';
+    clear:both;
+    display: block;
+}
+
+#contact-form input[type="text"] {
+    width: 49.5%;
+    float: left;
+    background-color: #f1f2f3;
+    border: 0;
+    padding: 15px 20px;
+    font-size: 14px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+#contact-form input[type="text"]:nth-child(2), #contact-form input[type="text"]:nth-child(4)  {
+    float: right;
+}
+
+#contact-form input[type="text"]:nth-child(3) {
+    clear:left;
+}
+
+#contact-form textarea {
+    width: 100%;
+    height: 225px;
+    margin-bottom: 10px;
+    background-color: #f1f2f3;
+    border: 0;
+    padding: 20px;
+    resize: none;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+
+#contact-form input[type="submit"] {
+    border: 0;
+    background-color: #74b1be;
+    text-transform: uppercase;
+    color: #fff;
+    padding: 10px 40px;
+    border-radius: 5px;
+    font-size: 11px;
+    font-weight: 700;
+    margin: auto;
+    display: block;
 }
 
 /* footer */
