--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ main {
     background-color: #2b2e3b;
     padding: 5em 0;
     text-align: center;
-    background:url(img/web-design-2038872_1920.jpg);
+    background:url(../img/web-design-2038872_1920.jpg);
     background-size: cover;
     position: relative;
 }
