--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* 
-Myhedspace Starter - v1.0
+Myhedspace Starter - v1.5
 by Jose Erlino M. Lontok
 http://jelontok.com
 http://myhedspace.com 
@@ -19,6 +19,7 @@ body {
 /*  Main Elements  */
 h1,h2,h3 {
     margin-top: 0;
+    color: #789048;
 }
 
 table {
@@ -51,20 +52,20 @@ code,kbd,samp {
 
 /* nav */
 nav {
-    background-color: #2f3241;
-    border-bottom: 1px #000 solid;
+    background-color: #607848;
+    border-bottom: 1px #C0D860 solid;
     padding: 1em 0;
 }
 
 nav .brand {
-    color: #74b1be;
+    color: #fff;
     text-decoration: none;
     font-weight: 700;
 }
 
 nav .brand span {
     font-weight: 300;
-    color: #999;
+    color: #C0D860;
 }
 
 .nav {
@@ -75,7 +76,7 @@ nav .brand span {
 .nav a {
     display: block;
     padding: 0 1em;
-    color: #74b1be;
+    color: #fff;
     text-decoration: none;
     font-size: 12px;
 }
@@ -85,10 +86,10 @@ main {
 }
 
 .feature {
-    background-color: #2b2e3b;
+    background-color: #607848;
     padding: 5em 0;
     text-align: center;
-    background:url(../img/web-design-2038872_1920.jpg);
+    background:url(../img/bled-1899264_1920.jpg);
     background-size: cover;
     position: relative;
 }
@@ -102,8 +103,8 @@ main {
     content:'';
     width: 100%;
     height: 100%;
-    background-color: #2b2e3b;
-    opacity: 0.9;
+    background-color: #607848;
+    opacity: 0.7;
     position: absolute;
     top: 0;
     left: 0;
@@ -113,11 +114,11 @@ main {
 .feature h1 {
     font-size: 3em;
     font-weight: 400;
-    color: #fff;
+    color: #F0F0D8;
 }
 
 .feature h2 {
-    color: #fff;
+    color: #F0F0D8;
     font-weight: 400;
     font-size: 1.2em;
 }
@@ -126,14 +127,29 @@ main {
     font-size: 10em;
     margin-right: 20px;
     vertical-align: middle;
-    color: #3a585f;
+    color: #C0D860;
 }
 
 .feature .fas {
     font-size: 2em;
     margin-right: 20px;
     vertical-align: middle;
-    color: #fff;
+    color: #F0F0D8;
+}
+
+hr {
+    height: 5px;    
+    margin: 40px auto;
+    border: 0;
+    background-color: #C0D860;
+}
+
+hr.small {
+    width: 150px;
+    height: 5px;    
+    margin: 40px auto 0 auto;
+    border: 0;
+    background-color: #C0D860;
 }
 
 /* layout helpers */
@@ -148,29 +164,6 @@ main {
 
 .fc-e {
     justify-content: flex-end;
-}
-
-.fgrid {
-    display: flex;
-    justify-content:space-between;
-    flex-wrap: wrap;
-    justify-content:flex-start;
-}
-
-.fgrid-3 .col {
-    width: 32%;
-    margin-bottom: 15px;
-}
-
-.fgrid .col img {
-    max-width: 100%;
-    height: auto;    
-    margin: auto;
-    display: block;
-}
-
-.sidebar {
-    width: 30%;
 }
 
 .txt-l {
@@ -195,22 +188,42 @@ main {
     margin: auto;
 }
 
-.card .thumb {
+.post-grid {
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    padding: 50px 0;    
+}
+
+.post-grid > article {
+    width: 32%;
+    margin-bottom: 35px;
+}
+
+.post-grid > article img {
+    max-width: 100%;
+    height: auto;    
+    margin: auto;
+    display: block;
+}
+
+.post-grid article .thumb {
     border: 1px #eee solid;
     border-radius: 5px
 }
 
-.card header .links {
+.post-grid article header .links {
     text-align: center;
 }
 
-.card header h3 {
+.post-grid article header h3 {
     margin-top: 15px;
 }
 
-.card header .button {
+.post-grid article header .button {
     text-decoration: none;
-    background-color: #3a585f;
+    background-color: #789048;
     color: #fff;
     padding: 5px 10px;
     border-radius: 5px;
@@ -257,7 +270,7 @@ main {
 
 #contact-form input[type="submit"] {
     border: 0;
-    background-color: #74b1be;
+    background-color: #789048;
     text-transform: uppercase;
     color: #fff;
     padding: 10px 40px;
@@ -270,15 +283,15 @@ main {
 
 /* footer */
 footer {
-    background-color: #f6f8f8;
+    background-color: #F0F0D8;
     border-top: 1px #e0e5e6 solid;
     padding: 2em;
     text-align: center;
-    color:#7c9398;
+    color:#789048;
 }
 
 footer a {
-    color:#7c9398;
+    color:#789048;
 }
 
 
